--- a/Andriod/StudentsHelper/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,29 +6,29 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/news_button"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/news"
             android:title="@string/news_text" />
         <item
             android:id="@+id/schedules_button"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/date"
             android:title="@string/schedules_text" />
         <item
             android:id="@+id/chat_button"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/speech_bubbles"
             android:title="@string/chat_text" />
     </group>
     <group android:id="@+id/grp2" android:checkableBehavior="single">
         <item
             android:id="@+id/settings_button"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/settings"
             android:title="@string/settings_text" />
         <item
             android:id="@+id/help_button"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/question"
             android:title="@string/help_text" />
         <item
             android:id="@+id/exit_button"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/exit"
             android:title="@string/exit_text" />
     </group>
 </menu>
