--- a/Andriod/StudentsHelper/app/src/main/res/layout/activity_splash.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/layout/activity_splash.xml
@@ -23,6 +23,7 @@
         android:gravity="center_horizontal"
         android:text="Кофеїн"
         android:textColor="@android:color/background_dark"
-        android:textSize="50sp" />
+        android:textSize="50sp"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
