--- a/Andriod/StudentsHelper/app/src/main/res/layout/content_main.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/layout/content_main.xml
@@ -33,8 +33,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/user"
-                    android:scaleX="1.5"
-                    android:scaleY="1.5"
+                    android:layout_marginTop="50dp"
                     android:layout_gravity="center_horizontal"
                     app:civ_border_color="#000000"
                     app:civ_border_width="1dp"/>
@@ -43,7 +42,6 @@
                     android:layout_height="wrap_content"
                     android:text="Arsen Denisuk"
                     android:textSize="24sp"
-                    android:layout_marginTop="20dp"
                     android:layout_alignParentBottom="true"
                     android:layout_gravity="center_horizontal"
                     />
@@ -56,19 +54,51 @@
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:weightSum="1"
-                android:background="@drawable/panels_description"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="4dp"
+                android:background="@drawable/shedules_description"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:bottomRightRadius="10dp"
                 android:bottomLeftRadius="10dp"
                 android:topLeftRadius="10dp"
                 android:topRightRadius="10dp"
                 >
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/lorem"/>
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:text="@string/subject_name"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:fontFamily="@font/roboto_thin" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="10dp"
+                    android:text="@string/subject_time"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+
+                    android:textStyle="bold"
+                    app:fontFamily="@font/roboto_thin" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="10dp"
+                    android:text="@string/subject_teacher"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:fontFamily="@font/roboto_thin" />
             </LinearLayout>
 
 
@@ -78,16 +108,40 @@
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:weightSum="1"
-                android:background="@drawable/panels_description"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
+                android:background="@drawable/sleep_description"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 >
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="-20dp"
+                    android:src="@drawable/warning_sign"
+                    />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/lorem"/>
+                    android:layout_marginTop="-65dp"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/more_sleep"
+                    app:fontFamily="@font/roboto_thin"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="10dp"
+                    android:text="@string/you_sleep"
+                    app:fontFamily="@font/roboto_thin"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -96,19 +150,19 @@
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:weightSum="1"
-                android:background="@drawable/panels_description"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
+                android:background="@drawable/sleep_description"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/lorem"/>
+                    android:text="@string/lorem"
+                    android:textSize="16sp"
+                    android:textColor="#000000"/>
             </LinearLayout>
         </LinearLayout>
-
-
     </RelativeLayout>
 </ScrollView>
