--- a/Andriod/StudentsHelper/app/src/main/res/layout/content_main.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/layout/content_main.xml
@@ -75,7 +75,8 @@
                     android:textColor="#ffffff"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    app:fontFamily="@font/roboto_thin" />
+                    app:fontFamily="@font/roboto_thin"
+                    />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -161,7 +162,21 @@
                     android:layout_height="match_parent"
                     android:text="@string/lorem"
                     android:textSize="16sp"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/tanutanu1"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"/>
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
