--- a/Andriod/StudentsHelper/app/src/main/res/layout/content_main.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/layout/content_main.xml
@@ -49,6 +49,7 @@
 
 
             <LinearLayout
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
