--- a/Andriod/StudentsHelper/app/src/main/res/layout/news_lip.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/layout/news_lip.xml
@@ -33,6 +33,7 @@
 
         <TextView
             android:layout_width="wrap_content"
+            android:id="@+id/content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title"
             android:maxLines="3"
@@ -43,12 +44,13 @@
 
         <TextView
             android:layout_width="wrap_content"
+            android:id="@+id/more"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:padding="8dp"
             android:text="@string/news_more"
-            android:textColor="?android:attr/colorError"
+            android:textColor="#FAFAFA"
             android:textSize="14dp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
