--- a/Andriod/StudentsHelper/app/src/main/res/layout/news_list.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/layout/news_list.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/simpleListView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:dividerHeight="4dp"
     />
