--- a/Andriod/StudentsHelper/app/src/main/res/layout/content_main.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/layout/content_main.xml
@@ -157,6 +157,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:onClick="goToNewsList"
                 >
                 <TextView
                     android:layout_width="match_parent"
